config: simplify profiles to assume that setEnv.sh will do part of the work